# sage-examples

./: .git-commit-msg  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  MANIFEST.in  PR_SUMMARY_2026-04-21.md  PYPI_TEST_REPORT.md  README.md  __init__.py  build.sh  compile_targets.txt  data  migrate_tutorials_to_sage.sh  pyproject.toml  quickstart.sh  requirements.txt
.github/: copilot-instructions.md
.github/agents/: sage-apps.agent.md  sage-examples.agent.md
.github/chatmodes/: sage-examples.chatmode.md
.github/workflows/: quality.yml  tests.yml
apps/: MANIFEST.in  README.md  pipeline_catalog.csv  pyproject.toml  run_article_monitoring.py  run_medical_diagnosis.py  run_video_intelligence.py  run_work_report.py  test_apps.py
apps/src/sage/apps/: __init__.py  _batch.py  _version.py
apps/src/sage/apps/academic_metadata/: README.md  __init__.py  operators.py  pipeline.py
apps/src/sage/apps/api_log_analytics/: README.md  __init__.py  operators.py  pipeline.py
apps/src/sage/apps/arbitrage_detector/: README.md  __init__.py  operators.py  pipeline.py
apps/src/sage/apps/article_monitoring/: README.md  (+2 more)
apps/tests/: conftest.py  test_package.py
apps/tests/article_monitoring/: test_operators.py
apps/tests/literature_report_assistant/: test_pipeline.py
apps/tests/medical_diagnosis/: __init__.py  demo_knowledge_loading.py  test_image_analyzer.py  test_image_quality.py  test_knowledge_base.py
apps/tests/patent_landscape_mapper/: test_pipeline.py
apps/tests/sageflow_service_demo/: test_config.py  test_demo_data.py  test_llm.py  test_operator_pipelines.py  test_service.py  test_workflow.py
apps/tests/smart_home/: __init__.py
apps/tests/student_improvement/: test_llm.py  test_workflow.py
apps/tests/supply_chain_alert/: __init__.py  test_api.py  test_detection.py  test_llm.py  test_service.py  test_workflow.py
apps/tests/ticket_triage/: test_api.py  test_routing_rules.py  test_service.py  test_workflow.py
apps/tests/work_report_generator/: __init__.py  test_operators.py
configs/: icpp_demo_zhipu.json
data/icpp_demo/nvd_2024_q1_3k/: events.jsonl  manifest.json
data/icpp_demo/results/nvd_2024_q1_3k_clustered_runtime/: summary.json  ws1024-p1-t0_5-clustered_join-engine.json  ws1024-p2-t0_5-clustered_join-engine.json  ws1024-p4-t0_5-clustered_join-engine.json  ws1024-p8-t0_5-clustered_join-engine.json  ws512-p1-t0_5-clustered_join-engine.json  ws512-p2-t0_5-clustered_join-engine.json  ws512-p4-t0_5-clustered_join-engine.json  ws512-p8-t0_5-clustered_join-engine.json
data/icpp_demo/results/nvd_2024_q1_3k_runtime/: summary.json  ws1024-p1-t0_8-ivf-engine.json  ws1024-p2-t0_8-ivf-engine.json  ws1024-p4-t0_8-ivf-engine.json  ws512-p1-t0_8-ivf-engine.json  ws512-p2-t0_8-ivf-engine.json  ws512-p4-t0_8-ivf-engine.json
data/icpp_demo/results/vuln_public_100_runtime/: summary.json  ws32-p1-t0_8-bruteforce_lazy.jsonl  ws32-p1-t0_9-bruteforce_lazy.jsonl  ws32-p2-t0_8-bruteforce_lazy.jsonl  ws32-p2-t0_9-bruteforce_lazy.jsonl  ws64-p1-t0_8-bruteforce_lazy.jsonl  ws64-p1-t0_9-bruteforce_lazy.jsonl  ws64-p2-t0_8-bruteforce_lazy.jsonl  ws64-p2-t0_9-bruteforce_lazy.jsonl
data/icpp_demo/results/vuln_public_100_zhipu_llm/: summary.json  ws64-p1-t0_85-bruteforce_lazy.jsonl  ws64-p2-t0_85-ivf.jsonl
data/icpp_demo/vuln_public_100/: embeddings.jsonl  events.jsonl  manifest.json
docs/: 100-app-roadmap.md  COPILOT_CONFIGURATION.md  DEVELOPMENT.md  MIGRATION_COMPLETE.md  PYPI_RELEASE_GUIDE.md  PYPI_SETUP_SUMMARY.md  REFACTORING_SUMMARY.md  customer-support-ticket-triage-plan.md  sage-100-app-roadmap.md  sage-demo-app-ideas.md  sageflow-icpp-demo-runbook.md  supply-chain-alert-board-plan.md
docs/adr/: 0001-d3-executability-regression.md  0002-d2-cleanup-outdated-examples.md  0003-d1-runnable-examples-boundary.md
examples/: README.md  __init__.py  demo_feature_extraction.py  run_academic_metadata.py  run_api_log_analytics.py  run_arbitrage_detector.py  run_article_monitoring.py  run_assignment_feedback.py  run_attendance_alert.py  run_auto_scaling_chat.py  run_backup_sync.py  run_benchmark_watch.py  run_brand_compliance_review.py  run_budget_variance_alert.py  run_campus_aid_gap_alert.py  run_campus_emission_report.py  run_carbon_collection.py  run_cashflow_watch.py  run_cold_chain_watch.py  run_community_hotspot_drift.py  run_company_credit.py  run_compliance_doc_manager.py  run_content_moderation.py  run_content_scheduler.py  run_content_tagger.py  run_contract_matcher.py  run_contract_risk.py  run_contract_versioning.py  run_course_qa_helper.py  run_customer_deduplication.py  run_data_center_watch.py  run_data_cleaner.py  run_doc_classifier.py  run_dorm_energy_optimizer.py  run_drug_leaflet_extractor.py  run_exhibition_heatmap.py  run_experiment_review.py  run_export_transformer.py  run_factory_watch.py  run_feedback_analyzer.py  (+70 more)
hooks/: pre-push
opc/: README.md  __init__.py  __main__.py  default_inputs.py  discovery.py  export_docs.py  introspection.py  models.py  runtime.py  server.py
opc/docs/: COMPATIBILITY_MATRIX.md  SAGE_EXAMPLES_APP_INVENTORY.md
opc/static/: app.css  app.js  index.html
opc/tests/: test_discovery.py  test_runtime.py  test_server.py
sage-apps/: pyproject.toml
sage-apps/src/sage/apps/: _version.py
sage-apps/tests/: __init__.py  test_medical_diagnosis.py  test_video_app.py
sage-apps/tests/article_monitoring/: __init__.py
sage-apps/tests/auto_scaling_chat/: __init__.py  test_operators.py
sage-apps/tests/medical_diagnosis/: conftest.py  test_diagnosis.py
sage-apps/tests/smart_home/: test_operators.py
sage-apps/tests/work_report_generator/: test_models.py
tools/config/: ruff.toml
tutorials/: QUICK_START.md  README.md  embedding_server_example.py  vllm_control_plane_tutorial.py
tutorials/L1-common/: embedding_server_example.py  unified_inference_client_example.py
tutorials/L2-platform/: README.md
tutorials/L3-libs/agents/: basic_agent.py
tutorials/L3-libs/embeddings/: cross_modal_search.py  embedding_service_demo.py  quickstart.py
tutorials/L5-apps/: README.md
tutorials/L6-interface/: README.md
(+435 files in other folders)
