[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "isage-apps"
dynamic = [
    "version",
]
description = "SAGE Applications - Real-world AI applications built on SAGE framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" },
]
keywords = [
    "sage",
    "applications",
    "ai",
    "video-intelligence",
    "medical-diagnosis",
    "computer-vision",
    "healthcare",
    "intellistream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    # 外部依赖
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0,<2.3.0",
    # Video 应用依赖
    # 使用 headless 版本避免系统 GUI 依赖 (libGL, libglib 等)
    "opencv-python-headless>=4.5.0",
    "torch>=2.7.0,<3.0.0",
    "torchvision>=0.22.0,<1.0.0",
    "transformers>=4.52.0,<4.54.0",  # 兼容 vllm 0.9.2 (避免 aimv2 配置冲突)
    # Medical 应用依赖
    "scikit-learn>=1.3.0",
]

license = {text = "MIT"}

[project.optional-dependencies]
# SAGE 内部依赖
sage-deps = [
    "isage-common>=0.2.0",
    "isage-kernel>=0.1.0",
    "isage-middleware>=0.1.0",
]
video = [
    "opencv-python-headless>=4.5.0",
    "torch>=2.7.0,<3.0.0",
    "torchvision>=0.22.0,<1.0.0",
    "transformers>=4.52.0,<4.54.0",  # 兼容 vllm 0.9.2 (避免 aimv2 配置冲突)
]
medical = [
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "pydicom>=2.3.0",
]
all = [
    "isage-apps[sage-deps,video,medical]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff==0.14.6",  # Pinned to match tools/pre-commit-config.yaml
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/SAGE"
Documentation = "https://intellistream.github.io/SAGE"
Repository = "https://github.com/intellistream/SAGE"
Issues = "https://github.com/intellistream/SAGE/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage*"]
namespaces = true

[tool.setuptools.dynamic.version]
attr = "sage.apps._version.__version__"

[tool.setuptools.package-data]
"sage.apps" = [
    "py.typed",
]
"sage.apps.video" = [
    "config/*.yaml",
    "data/**/*",
]
"sage.apps.medical_diagnosis" = [
    "config/*.yaml",
    "data/**/*",
]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
]
include = "\\.pyi?$"

[tool.mypy]
python_version = "3.10"
cache_dir = "../../.sage/cache/mypy"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
extend = "../../tools/ruff.toml"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "--benchmark-storage=../../.sage/benchmarks",
    "-o",
    "cache_dir=../../.sage/cache/pytest",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "video: marks tests as video intelligence tests",
    "medical: marks tests as medical diagnosis tests",
]

[tool.coverage.run]
source = [
    "src/sage",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/_test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
